Update javafx and monocle dependencies