@@ -52,7 +52,7 @@
 
 		<!-- Runtime dependencies -->
 		<!--java.version defined in parent pom -->
-		<javafx.version>11</javafx.version>
+		<javafx.version>11.0.2</javafx.version>
 		<controlsfx.version>9.0.0</controlsfx.version>
 		<undofx.version>2.1.0</undofx.version>
 		<slf4j.version>1.8.0-beta2</slf4j.version>
@@ -61,7 +61,7 @@
 		<!-- Test dependencies -->
 		<surefire.version>3.0.0-M3</surefire.version>
 		<testfx.version>4.0.15-alpha</testfx.version>
-		<monocle.version>jdk-11+23</monocle.version>
+		<monocle.version>jdk-11+26</monocle.version>
 
 		<!-- Build dependencies -->
 		<izpack.version>5.1.3-SNAPSHOT</izpack.version>
@@ -194,12 +194,15 @@
 				<!-- Does not work with Java 10 and Surefire 2.22.0 -->
 				<version>${surefire.version}</version>
 				<configuration>
-					<skip>true</skip>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<runOrder>alphabetical</runOrder>
 					<argLine>
 						-Xmx128m
+						--add-opens=java.base/java.util=ALL-UNNAMED
+						--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+						--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 					</argLine>
 					<systemPropertyVariables>
 						<!-- Set testfx.setup.timeout to a reasonable time -->
